more elegant, less laggy hero animations. No longer overflow screen on right. styling to wallpaper

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -5,6 +5,8 @@ html {
 
   &.sr .load-hidden {
     visibility: hidden;
+    max-width: 100%;
+    overflow-x: hidden;
   }
 }
 
